--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/src/Images/FavicoinGe3k.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://js.stripe.com/v3/"></script>
-    <title>Ge3k.Hub</title>
+    <title>Ge3kHub</title>
   </head>
   <body>
     <div id="root"></div>
